# tickertock

./: .gitignore  CLAUDE.md  LICENSE.txt  README.rst  pyproject.toml
.claude/: settings.local.json
ticker/: clockify.py  config.py  ticker.py  ui.py  utils.py
ticker/scripts/: ticker.py
ticker/skel/: __init__.py  config.toml.j2  projects.toml
tickertock/: clockify.py  config.py  tickertock.py  ui.py  utils.py
tickertock/scripts/: tickertock.py
tickertock/skel/: __init__.py  streamdeck_ui.json.j2
