[build-system]
requires = ["setuptools >= 58.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tickertock"
description = "Streamdeck as a timetracker"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["timetracking", "clockify"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "streamdeck_ui",
    "jinja2",
    "clockify",
    "click",
    "xdg",
]
dynamic = ["version"]

[project.scripts]
tickertock = "tickertock.scripts.tickertock:cli"

[tool.setuptools.package-data]
"tickertock.skel.assets" = ["*"]

[tool.setuptools.dynamic]
version = {attr = "tickertock.__version__"}
